--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_GOOGLE_CLIENT_ID=Please define client ID here
+REACT_APP_GOOGLE_CLIENT_ID=118577897243-3epl403sj05h3ora2s2c4f2p8uudsv26.apps.googleusercontent.com
